# graduation-research

./: .gitignore  README.md  install.sh  make_env.sh
learning/: RoboEnv.py  SimulatorClient.py  main.py  simulator_pb2.py  simulator_pb2_grpc.py
proto/: simulator.proto
simulator/: .gitignore  CMakeLists.txt  SimulatorServer.cpp  SimulatorServer.h  kensei.cpp  kensei.h  main.cpp
